# rules_k8s_controller

./: BUILD.bazel  README.rst  WORKSPACE  deps.bzl  go.mod  go.sum
example/: BUILD.bazel  kustomization.yaml  minio-operator.yaml
example/pkg/api/: BUILD.bazel
example/pkg/api/mock/v1alpha1/: BUILD.bazel  doc.go  register.go  types.go  zz_generated.deepcopy.go
example/pkg/client/versioned/: BUILD.bazel  clientset.go
example/pkg/client/versioned/fake/: BUILD.bazel  clientset_generated.go  register.go
example/pkg/client/versioned/scheme/: BUILD.bazel  register.go
example/pkg/client/versioned/typed/mock/v1alpha1/: BUILD.bazel  generated_expansion.go  mock.go  mock_client.go
example/pkg/client/versioned/typed/mock/v1alpha1/fake/: BUILD.bazel  fake_mock.go  fake_mock_client.go
example/pkg/informers/externalversions/: BUILD.bazel  factory.go  generic.go
example/pkg/informers/externalversions/internalinterfaces/: BUILD.bazel  factory_interfaces.go
example/pkg/informers/externalversions/mock/: BUILD.bazel  interface.go
example/pkg/informers/externalversions/mock/v1alpha1/: BUILD.bazel  interface.go  mock.go
example/pkg/listers/mock/v1alpha1/: BUILD.bazel  expansion_generated.go  mock.go
hack/update-kustomize-assets/: BUILD.bazel  main.go
internal/go/: BUILD.bazel  vendor.bzl
k8s/: code-generator.bash  controller-gen.bash  controller-tools.bzl  def.bzl  toolchain.bzl
k8s/kind/: assets.bzl  cluster.bzl  def.bzl
k8s/kustomize/: assets.bzl  def.bzl
scripts/: BUILD.bazel  import-code-generator.sh  import-controller-tools.sh
tools/kindcluster/: BUILD.bazel  main.go
