load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_google_go_github_v33//github:go_default_library",
        "@com_github_masterminds_semver_v3//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)

go_binary(
    name = "update-kustomize-assets",
    embed = [":update-kustomize-assets_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "update-kustomize-assets_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/rules_k8s_controller/hack/update-kustomize-assets",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/Masterminds/semver/v3:semver",
        "//vendor/github.com/bazelbuild/buildtools/build",
        "//vendor/github.com/google/go-github/v33/github",
        "//vendor/github.com/spf13/pflag",
    ],
)
