load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kindcluster_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/rules_k8s_controller/tools/kindcluster",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/spf13/cobra",
        "//vendor/golang.org/x/xerrors",
        "//vendor/gopkg.in/yaml.v2:yaml_v2",
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/client-go/kubernetes",
        "//vendor/k8s.io/client-go/rest",
        "//vendor/k8s.io/client-go/tools/clientcmd",
        "//vendor/sigs.k8s.io/kind/pkg/apis/config/v1alpha4",
    ],
)

go_binary(
    name = "kindcluster",
    embed = [":kindcluster_lib"],
    visibility = ["//visibility:public"],
)
