load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "versioned",
    srcs = [
        "clientset.go",
        "doc.go",
    ],
    importpath = "go.f110.dev/rules_k8s_controller/example/pkg/client/versioned",
    visibility = ["//visibility:public"],
    deps = [
        "//example/pkg/client/versioned/typed/mock/v1alpha1",
        "@io_k8s_client_go//discovery:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//util/flowcontrol:go_default_library",
    ],
)
