load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internalinterfaces",
    srcs = ["factory_interfaces.go"],
    importpath = "go.f110.dev/rules_k8s_controller/example/pkg/informers/externalversions/internalinterfaces",
    visibility = ["//visibility:public"],
    deps = [
        "//example/pkg/client/versioned",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/client-go/tools/cache",
    ],
)
