load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "expansion_generated.go",
        "mock.go",
    ],
    importpath = "go.f110.dev/rules_k8s_controller/example/pkg/listers/mock/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//example/pkg/api/mock/v1alpha1",
        "//vendor/k8s.io/apimachinery/pkg/api/errors",
        "//vendor/k8s.io/apimachinery/pkg/labels",
        "//vendor/k8s.io/client-go/tools/cache",
    ],
)
