load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "interface.go",
        "mock.go",
    ],
    importpath = "go.f110.dev/rules_k8s_controller/example/pkg/informers/externalversions/mock/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//example/pkg/api/mock/v1alpha1",
        "//example/pkg/client/versioned",
        "//example/pkg/informers/externalversions/internalinterfaces",
        "//example/pkg/listers/mock/v1alpha1",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/watch",
        "//vendor/k8s.io/client-go/tools/cache",
    ],
)
