load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "doc.go",
        "generated_expansion.go",
        "mock.go",
        "mock_client.go",
    ],
    importpath = "go.f110.dev/rules_k8s_controller/example/pkg/client/versioned/typed/mock/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//example/pkg/api/mock/v1alpha1",
        "//example/pkg/client/versioned/scheme",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/types",
        "//vendor/k8s.io/apimachinery/pkg/watch",
        "//vendor/k8s.io/client-go/rest",
    ],
)
