load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "fake",
    srcs = [
        "doc.go",
        "fake_mock.go",
        "fake_mock_client.go",
    ],
    importpath = "go.f110.dev/rules_k8s_controller/example/pkg/client/versioned/typed/mock/v1alpha1/fake",
    visibility = ["//visibility:public"],
    deps = [
        "//example/pkg/api/mock/v1alpha1",
        "//example/pkg/client/versioned/typed/mock/v1alpha1",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/labels",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
        "//vendor/k8s.io/apimachinery/pkg/types",
        "//vendor/k8s.io/apimachinery/pkg/watch",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//testing:go_default_library",
    ],
)
